force-app/main/default/objects/Channel_Price_Book__c/Channel_Price_Book__c.object-meta.xml
<CustomObject>
    <label>Channel Price Book</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Partner Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Price Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>