force-app/main/default/objects/Channel_Price_Book__c/fields/Channel_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Program Level</label>
    <referenceTo>ChannelProgramLevel</referenceTo>
    <relationshipLabel>Channel Price Books</relationshipLabel>
    <relationshipName>Channel_Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>