force-app/main/default/objects/Channel_Price_Book__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Independent Service Organization</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor</fullName>
            </value>
            <value>
                <fullName>Managed Services Provider</fullName>
            </value>
            <value>
                <fullName>Master VAR</fullName>
            </value>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>Direct Partner</fullName>
            </value>
            <value>
                <fullName>Indirect Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>