force-app/main/default/objects/Channel_Price_Book__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>CLA BRAZIL</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>EUROPE EXC RUSSIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>NAMER CFI</fullName>
            </value>
            <value>
                <fullName>NAMER MAJORS</fullName>
            </value>
            <value>
                <fullName>SAPAC</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>MEA GSL</fullName>
            </value>
            <value>
                <fullName>NORDIC</fullName>
            </value>
            <value>
                <fullName>CIS GSL</fullName>
            </value>
            <value>
                <fullName>N. AFRICA GSL</fullName>
            </value>
            <value>
                <fullName>S. AFRICA RSA GSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>